@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*specView-1.0.4 (25 Apr 2014)
+
+  25 Apr 2014; Justin Lecher <jlec@gentoo.org> +specView-1.0.4.ebuild:
+  Version BUmp
+
 *specView-1.0.3_p2 (26 Mar 2014)
 
   26 Mar 2014; Justin Lecher <jlec@gentoo.org> +specView-1.0.3_p2.ebuild:
